# ContextEngine

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISTRIBUTION.md  LICENSE  MAINTAINERS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  context-engine-runtime-v3.2.0-20251118-202118Z.tar  context-engine-runtime-v3.2.0-20251119-155536Z.tar  context-engine-runtime-v3.3.0-20251124-130820Z.tar  context-engine-runtime-v3.4.0-20251129-174935Z.tar  context-engine-runtime-v3.4.1-20251130-235318Z.tar  context-engine-runtime-v3.4.1-20251204-172220Z.tar  context-engine-runtime-v3.5.0-20251208-204534Z.tar  context-engine-runtime-v3.6.0-20251211-190146Z.tar  pyproject.toml
.claude/commands/: push-github.sh  push-origin.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
commands/: ce-capture.md  ce-extract.md  ce-init.md  ce-init.sh  ce-mark-salience.md  ce-tags-optimize-all.md
config/: deployment.yaml.example  tag-vocabulary.yaml.example
docs/: COMMUNITY.md  FAQ.md  GETTING_STARTED.md  INITIALIZATION.md  KNOWLEDGE_DRIVEN.md  UPGRADE.md
schema/: schema.sql
scripts/: extract.py  knowledge-classify.py  optimize-tags.py  quality-classify.py  rules-curate.py  runtime-script-vocabulary-validator.py  tags-check.py  tags-review.py  tags-stats.py  validate_chatlog.py
templates/: onboard-prompt-foundational.txt  onboard-prompt-recent.txt  onboard-prompt-summary.txt  runtime-template-chatlog-capture.md  runtime-template-knowledge-classification.txt  runtime-template-mark-salience.txt  runtime-template-onboard-generate.md  runtime-template-onboard-root.md  runtime-template-onboard-root.txt  runtime-template-quality-classification.txt  runtime-template-rules-conflict-resolution.txt  runtime-template-tag-optimization.txt  runtime-template-tags-optimize-all.md
(+22 files in other folders)
